objects/xtma_Link_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Email_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email Result</label>
        <referenceTo>xtma_Email_Result__c</referenceTo>
        <relationshipLabel>Link Details</relationshipLabel>
        <relationshipName>R00N50000001hJk3EAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Individual_Email_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual Email Result</label>
        <referenceTo>xtma_Individual_Email_Result__c</referenceTo>
        <relationshipLabel>Link Details</relationshipLabel>
        <relationshipName>R00N50000001hJjaEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Clicked__c</fullName>
        <label>Last Clicked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Number_of_Total_Clicks__c</fullName>
        <label>Number of Total Clicks</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Unique_Clicks__c</fullName>
        <label>Number of Unique Clicks</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Link Detail</label>
    <listViews>
        <fullName>CON_Business_Administrator_xtma_Link_Detail</fullName>
        <filterScope>Queue</filterScope>
        <label>CON Business Administrator</label>
        <queue>CON_Business_Administrator</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSC_Business_Administrators_xtma_Link_Detail</fullName>
        <filterScope>Queue</filterScope>
        <label>CSC Business Administrators</label>
        <queue>CSC_Business_Administrators</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Link Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>